# BestPracticeTizenNativeManager

./: CMakeLists.txt  bps-bp-manager-tizen.pc.in
include/: bp_manager_tizen_common.h
packaging/: bps-bp-manager-tizen.conf  bps-bp-manager-tizen.conf.in  bps-bp-manager-tizen.service  bps-bp-manager-tizen.spec
src/: CMakeLists.txt  bp_manager_tizen_dbus_interface.c  bp_manager_tizen_implementation.c  bps-bp-manager-tizen.conf.in  org.tizen.bp.manager.tizen.service.in
unit_tests/: CMakeLists.txt
